[package]
name = "fantom"
version = "0.1.0"
authors = ["n01e0 <reoshiseki@gmail.com>"]
edition = "2018"
description = """
@@@@@@@@   @@@@@@   @@@  @@@  @@@@@@@   @@@@@@   @@@@@@@@@@
@@@@@@@@  @@@@@@@@  @@@@ @@@  @@@@@@@  @@@@@@@@  @@@@@@@@@@@
@@!       @@!  @@@  @@!@!@@@    @@!    @@!  @@@  @@! @@! @@!
!@!       !@!  @!@  !@!!@!@!    !@!    !@!  @!@  !@! !@! !@!
@!!!:!    @!@!@!@!  @!@ !!@!    @!!    @!@  !@!  @!! !!@ @!@
!!!!!:    !!!@!!!!  !@!  !!!    !!!    !@!  !!!  !@!   ! !@!
!!:       !!:  !!!  !!:  !!!    !!:    !!:  !!!  !!:     !!:
:!:       :!:  !:!  :!:  !:!    :!:    :!:  !:!  :!:     :!:
 ::       ::   :::   ::   ::     ::    ::::: ::  :::     ::
 :         :   : :  ::    :      :      : :  :    :      :
"""

[dependencies]
caps = "0.5.0"
clap = { version = "2.33.3", features = ["yaml"] }
fanotify-rs = { git = "https://github.com/n01e0/fanotify-rs" }
